button color added and testings

--- a/src/components/ClientProject/ClientProject.css
+++ b/src/components/ClientProject/ClientProject.css
@@ -746,6 +746,7 @@
   border: none;
   text-align: center;
   white-space: nowrap;
+  width: fit-content;
 }
 
 /* Primary Button (View Applications) */
